refactor: 重构未读消息处理逻辑，优化错误处理和添加测试
- 删除旧的异常类：PermanentErrorException、RateLimitException、TemporaryErrorException
- 删除 ErrorHandler 类，其功能被整合到新服务中
- 新增 UnreadMessageSourceBufferService，重构消息缓冲逻辑，并重命名原有服务
- 在多个服务和仓库中添加 @NonNull 注解，增强代码空安全
- 修复 GlobalExceptionHandler 中的空指针问题，改进异常处理
- 修改 MongoDB 相关配置和监听器，优化数据访问层
- 新增前端测试文件和组件，支持消息跟踪功能，包括 API 集成和界面优化